test/equality/negative/comp_extra_arg.mli
type 'a t

val f : (int -> int -> int) -> 'a t -> 'a t -> int
(*@ comparison *)
